--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,13 +21,11 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        username: EmilMoe
+        password: ${{ secrets.PAT_TOKEN }}
 
     - name: Build Docker image
-      run: |
-        docker build -t ghcr.io/emilmoe/service:latest .
+      run: docker build -t ghcr.io/emilmoe/service:latest .
 
     - name: Push Docker image
-      run: |
-        docker push ghcr.io/emilmoe/service:latest
+      run: docker push ghcr.io/emilmoe/service:latest
