--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -21,8 +21,8 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: EmilMoe
-        password: ${{ secrets.PAT_TOKEN }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build Docker image
       run: docker build -t ghcr.io/emilmoe/service:latest .
