--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+  schedule:
+    - cron: "0 3 1,15 * *"
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -14,22 +17,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-    - name: Login to GitHub Container Registry
+    - name: Normalize owner + repo
+      run: |
+        echo "OWNER_LC=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+        echo "REPO_LC=$(echo '${{ github.repository }}' | awk -F'/' '{print $2}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
+    - name: Login to GHCR
       uses: docker/login-action@v3
       with:
         registry: ghcr.io
-        username: ${{ github.repository_owner }}
-        password: ${{ secrets.PAT_TOKEN }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build Docker image
-      run: docker build -t ghcr.io/emilmoe/service:latest .
+    - name: Build
+      run: docker build --pull -t ghcr.io/${OWNER_LC}/${REPO_LC}:latest .
 
     - name: Verify redis extension
       run: |
-        docker run --rm ghcr.io/emilmoe/service:latest php -m | grep -q redis
+        docker run --rm ghcr.io/${OWNER_LC}/${REPO_LC}:latest php -m | grep -qi redis
 
-    - name: Push Docker image
-      run: docker push ghcr.io/emilmoe/service:latest
+    - name: Push
+      run: docker push ghcr.io/${OWNER_LC}/${REPO_LC}:latest
